# ExoSuite

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  ExoSuite.sln  ExoSuite.vcxproj  README.md  TODO.md  build.bat  build.ps1  build.rs  nuget.config  packages.config
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
exokit/: Bootstrap-ExoKit.ps1  Build-All.ps1  Build-ExoSuite.ps1  Build-Extension.ps1  Build-Shell.ps1  Init-ExoKit.ps1
extensions/: README.md
shared/: README.md
shared/exo-ui/: CMakeLists.txt
shared/exo-ui/include/exo/: dpi.h  export.h  icons.h  render.h  theme.h
shared/exo-ui/include/exo/controls/: sidebar.h  statusbar.h  toolbar.h
shared/exo-ui/src/: icons.cpp  render.cpp  theme.cpp
shared/exo-ui/src/controls/: sidebar.cpp  statusbar.cpp  toolbar.cpp
shared/lucide/: CMakeLists.txt
shared/lucide/include/: lucide.h
shared/lucide/src/: lucide.cpp
shell/: Cargo.toml  build.rs
shell/src/: main.rs
shell/ui/: main.slint
src/: CMakeLists.txt  ExoSuite.rc  main.cpp  main.rs  resource.h
src/Core/: CplInterop.cpp  CplInterop.h  CplItem.cpp  CplItem.h  CplLoader.cpp  CplLoader.h  Platform.cpp  Platform.h
ui/: main.slint
