# ExoSuite Workspace
# This is the root workspace manifest for the ExoSuite monorepo.

[workspace]
members = ["shell"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rizonesoft (Pty) Ltd"]
license = "Proprietary"

[profile.release]
opt-level = 3
lto = true
strip = true
