[package]
name = "exosuite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A modern Control Panel replacement for Windows 10/11"

[dependencies]
slint = { version = "1.15", features = ["unstable-winit-030"] }
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.15"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[[bin]]
name = "ExoSuite"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"
